# QtNetMonitor

./: .gitignore  CMakeLists.txt  README.md
resources/: qml.qrc
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h  AuthController.cpp  AuthController.h
src/controllers/: AuthController.cpp  AuthController.h  ConfigController.cpp  ConfigController.h  NetworkController.cpp  NetworkController.h  ProfileController.cpp  ProfileController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/network/: MessageProtocol.cpp  MessageProtocol.h  NetworkClient.cpp  NetworkClient.h
testServer/: CMakeLists.txt
testServer/src/: main.cpp
ui/: main.qml
ui/auth/: AuthPage.qml  Login.qml  LoginPage.qml  Signup.qml  SignupPage.qml
ui/pages/: ConfigPage.qml  Dashboard.qml  MainPage.qml  MonitorPage.qml  ProfilePage.qml
